# deterministic_program_crafter

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile.local.just  reference_flake.nix  result
.config/flakebox/: id
.github/workflows/: flakebox-ci.yml
auto_gpt/: Cargo.toml
axum_template/: Cargo.toml
axum_template/src/: db.rs  handlers.rs  main.rs
flakebot/: Cargo.toml
flakebot-new/: Cargo.toml
flakebot-original/: Cargo.toml
flakebot-original/src/: app.rs  config.rs  crates_io.rs  github.rs  groq.rs  main.rs
my_proc_macro/: Cargo.toml
my_proc_macro/src/: lib.rs
src/: app.rs  config.rs  flake.rs  github.rs  groq.rs  main.rs  templates.rs
