[package]
name = "deterministic_program_crafter"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
clap = { version = "4.3.19", features = ["derive", "env"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18.3"
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
