[package]
name = "flakebot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flakebot"
path = "flakebot-new/src/main.rs"

[workspace]
members = ["flakebot-original", "flakebot-new", "axum_template"]

[workspace.dependencies]
dotenv = "0.15.0"
clap = { version = "3", features = ["derive", "env"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18.3"
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
fs_extra = "1.3.0"

[profile]

[profile.ci]
inherits = "dev"
incremental = false
debug = "line-tables-only"
lto = "off"
