[package]
name = "auto_gpt"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossterm = "0.27.0"
async-trait = "0.1.68"
webbrowser = "1.0.1"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.4"
ai_functions = "0.1.1"
