[package]
name = "axum_template"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.7.5", features = ["macros", "json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
