[package]
name = "flakebot-original"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
git2 = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
fs_extra = { workspace = true }
